# agentic_protocols

./: .gitignore  Dockerfile  Dockerfile.alice  Dockerfile.bak  Dockerfile.bob  Makefile  README.md  docker-compose.yml  pyproject.toml
alice/: Dockerfile
alice/src/agentic_protocols/: utils.py
alice/src/agentic_protocols/alice_acp/: alice.py
bob/: Dockerfile
bob/src/agentic_protocols/: client.py
bob/src/agentic_protocols/bob_acp/: bob.py
fran/: Dockerfile  pyproject.toml
fran/src/agentic_protocols/: utils.py
fran/src/agentic_protocols/fran_a2a/: fran.py
src/agentic_protocols/: client.py  utils.py
src/agentic_protocols/alice_acp/: alice.py
src/agentic_protocols/bob_acp/: bob.py
